<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:care="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical">

    <com.magcomm.sharelibrary.views.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        care:right_visible="invisible"
        care:tp_title="@string/topbar_title_user_info" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/settings_default_margin"
        android:background="@color/devider_color" />

    <RelativeLayout
        android:id="@+id/info_head"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:background="@drawable/select_menu_item_bg"
        android:clickable="true"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/settings_default_margin"
            android:gravity="center"
            android:text="@string/txt_info_head"
            android:textColor="@color/color_light_gray"
            android:textSize="@dimen/settings_default_textsize" />

        <ImageView
            android:id="@+id/icon_tip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="@dimen/settings_default_margin"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_tip" />

        <ImageView
            android:id="@+id/info_head_pic"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:layout_margin="4dp"
            android:layout_toLeftOf="@id/icon_tip"
            android:background="@drawable/ic_person_cornor"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_person_normal" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/settings_default_margin"
        android:background="@color/devider_color" />

    <com.magcomm.sharelibrary.views.SettingsItem
        android:id="@+id/info_sharid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/select_menu_item_cancel"
        care:content_str="@string/txt_test_id"
        care:tip_visible="gone"
        care:title_clickable="false"
        care:tp_title="@string/txt_info_share_id" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/devider_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/settings_default_margin"
        android:background="@color/devider_color" />

    <com.magcomm.sharelibrary.views.SettingsItem
        android:id="@+id/info_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/select_menu_item_bg"
        care:content_str="@string/app_name"
        care:tp_title="@string/txt_info_nake_name" />

    <com.magcomm.sharelibrary.views.SettingsItem
        android:id="@+id/info_sex"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/select_menu_item_bg"
        care:content_str="@string/txt_sex_male"
        care:tp_title="@string/txt_info_sex" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/settings_default_margin"
        android:background="@color/devider_color" />

    <com.magcomm.sharelibrary.views.SettingsItem
        android:id="@+id/info_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/select_menu_item_bg"
        care:tp_title="@string/txt_info_settings" />
</LinearLayout>