<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:care="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.magcomm.sharelibrary.views.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        care:tp_title="@string/topbar_title_reset_pw" />


    <com.magcomm.sharelibrary.views.TextEditView
        android:id="@+id/reset_pw_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tvt_edit_height"
        android:layout_marginTop="18dp"
        android:background="@drawable/shape_corner_background"
        care:edittext_inputtype="textVisiblePassword"
        care:txt_edit_hint="@string/txt_reset_input_new_pw"
        care:txt_edit_label="@string/txt_reset_new_pw"
        care:txt_edit_textcolor="@color/content_default_color" />
    <!--
        <com.magcomm.sharelibrary.views.TextEditView
            android:id="@+id/reset_pw_confire"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tvt_edit_height"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_corner_background"
            care:edittext_inputtype="textVisiblePassword"
            care:txt_edit_hint="@string/txt_reset_confire_input_pw"
            care:txt_edit_label="@string/txt_reset_comfire_pw"
            care:txt_edit_textcolor="@color/content_default_color" />-->
    <Button
        android:id="@+id/btn_reset_complete"
        style="@style/BtnLoginStyle"
        android:layout_marginTop="20dp"
        android:text="@string/btn_reset_complete" />
</LinearLayout>