<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:care="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.magcomm.sharelibrary.views.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        care:tp_title="@string/pop_menu_create" />

    <com.magcomm.sharelibrary.views.TextEditView
        android:id="@+id/create_group_edit"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_corner_background"
        care:edittext_inputtype="text"
        care:txt_content_length="5"
        care:txt_edit_hint="@string/hint_group_name"
        care:txt_edit_label="@string/group_name" />

    <Button
        android:id="@+id/btn_create_group"
        style="@style/BtnLoginStyle"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/btn_create_success" />
</LinearLayout>