<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:care="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.magcomm.sharelibrary.views.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        care:tp_title="@string/topbar_title_reset_pw" />

    <TextView
        android:id="@+id/reset_tv_notice"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/shape_corner_background"
        android:gravity="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/shape_corner_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.magcomm.sharelibrary.views.TextEditView
            android:id="@+id/reset_pw_verfi"
            android:layout_width="0dip"
            android:layout_height="@dimen/tvt_edit_height"
            android:layout_weight="1.0"
            care:edittext_inputtype="textVisiblePassword"
            care:txt_content_length="4"
            care:txt_edit_hint="@string/hint_verfi_code"
            care:txt_edit_label="@string/label_verifi_code"
            care:txt_edit_textcolor="@color/content_default_color" />

        <View
            android:layout_width="1px"
            android:layout_height="@dimen/tvt_edit_height"
            android:background="@color/devider_color" />

        <com.magcomm.sharelibrary.views.TimerButton
            android:id="@+id/reset_pw_timer"
            android:layout_width="@dimen/tvt_edit_width"
            android:layout_height="@dimen/tvt_edit_height"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/color_light_green"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_reset_veri_next"
        style="@style/BtnLoginStyle"
        android:layout_marginTop="20dp"
        android:text="@string/btn_next" />

    <TextView
        android:id="@+id/reet_no_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_default_margin"
        android:clickable="true"
        android:gravity="right"
        android:layout_marginRight="@dimen/settings_default_margin"
        android:text="@string/txt_reset_no_message"
        android:textColor="@color/tv_get_verifi_bg"
        android:textSize="16sp" />
</LinearLayout>